added intercooler, script, lombok dependency

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" data-framework="intercoolerjs">
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Codecool" />
@@ -24,7 +24,11 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="/css/custom.css" />
+    <!-- IntercoolerJS -->
+    <script src="http://cdn.intercoolerjs.org/intercooler-1.0.2.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/css/custom.css"/>
+    <script src="/js/script.js"></script>
 </head>
 
 <body>
