--- a/src/main/resources/public/css/custom.css
+++ b/src/main/resources/public/css/custom.css
@@ -1,6 +1,3 @@
-.glyphicon {
-    margin-right:5px;
-}
 .thumbnail
 {
     margin-bottom: 20px;
@@ -59,4 +56,13 @@
 .list-group-item-text
 {
     margin: 0 0 11px;
+}
+.scrollable {
+    position: relative;
+}
+#products {
+    padding-top: 60px;
+}
+.dropdown {
+    padding-left: 10px;
 }
