--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -26,39 +26,46 @@
 
     <link rel="stylesheet" type="text/css" href="/css/custom.css" />
 </head>
-
 <body>
+    <div class="scrollable" data-spy="scroll" data-target=".navbar" data-offset="50">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">Codecool Shop</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" id="dropdownCategories" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" th:text="${category? category.name : 'Select a category'}"></a>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownCategories">
+                                    <li><a href="/category/" th:each="categ,iterStat : ${categories}" th:attr="href='/category/' + ${categ.id}" th:text="${categ.name}"></a></li>
+                                </ul>
+                        </li>
 
-<div class="jumbotron text-center">
-    <h1><a href="/">Codecool Shop</a></h1>
-</div>
-<div class="container">
-    <div class="well well-sm">
-
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownCategories" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" th:text="${category? category.name : 'Select a category'}">
-                Choose
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownCategories">
-                <li><a href="/category/" th:each="categ,iterStat : ${categories}" th:attr="href='/category/' + ${categ.id}" th:text="${categ.name}"></a></li>
-            </ul>
-        </div>
-
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownSuppliers" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" th:text="${supplier? supplier.name : 'Select a supplier'}">
-                Choose
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownSuppliers">
-                <li><a href="/supplier/" th:each="suppl,iterStat : ${suppliers}" th:attr="href='/supplier/' + ${suppl.id}" th:text="${suppl.name}"></a></li>
-            </ul>
-        </div>
-        <!--<strong th:text="${category.name}">Category Title</strong>-->
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" id="dropdownSuppliers" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" th:text="${supplier? supplier.name : 'Select a supplier'}"></a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownSuppliers">
+                                <li><a href="/supplier/" th:each="suppl,iterStat : ${suppliers}" th:attr="href='/supplier/' + ${suppl.id}" th:text="${suppl.name}"></a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a id="cart-popover" class="btn" data-placement="top" title="Carrinho de Compras">
+                                <span class="glyphicon glyphicon-shopping-cart"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
 
-
-    <div id="products" class="row list-group">
+    <div id="products" class="row list-group products">
 
         <div class="item col-xs-4 col-lg-4" th:each="prod,iterStat : ${products}">
             <div class="thumbnail">
@@ -78,10 +85,6 @@
             </div>
         </div>
     </div>
-
-</div>
-
-<div th:replace="footer :: copy"></div>
-
+    <div th:replace="footer :: copy"></div>
 </body>
 </html>
