--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -56,7 +56,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a id="cart-popover" class="btn" data-placement="top" href="#" th:attr="title='Total number of items in your cart: ' + ${totalItemQuantity}">
-                                <span class="glyphicon glyphicon-shopping-cart" th:text="' (' + ${totalItemQuantity} + ')'"></span>
+                                <span class="glyphicon glyphicon-shopping-cart" th:text="' (' + ${totalItemQuantity} + ')  ' + 'Total price: '"
+                                      data-toggle="modal" data-target="#cartModal"></span>
                             </a>
                         </li>
                     </ul>
@@ -64,6 +65,26 @@
             </div>
         </nav>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="cartModalLabel">Content of yur Shopping cart</h4>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container-fluid">
     <div id="products" class="row list-group products">
 
