--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -55,8 +55,11 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a id="cart-popover" class="btn" data-placement="top" href="#" th:attr="title='Total number of items in your cart: ' + ${totalItemQuantity}">
-                                <span class="glyphicon glyphicon-shopping-cart" th:text="' (' + ${totalItemQuantity} + ')  ' + 'Total price: '"
+                            <a id="cart-popover" class="btn" data-placement="top" href="#"
+                               th:attr="title='Total number of items in your cart: ' + ${totalItemQuantity}">
+                                <span class="glyphicon glyphicon-shopping-cart" th:text="' ('
+                                + ${totalItemQuantity} + ')  ' + 'Total price: ' + ${order.getCartTotalPrice()} +
+                                ' USD'"
                                       data-toggle="modal" data-target="#cartModal"></span>
                             </a>
                         </li>
@@ -67,20 +70,43 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalLabel">
+    <div class="modal fade bs-example-modal-lg" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="cartModalLabel">Content of yur Shopping cart</h4>
                 </div>
+                <form>
                 <div class="modal-body">
-                    ...
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Product name</th>
+                                <th>Quantity</th>
+                                <th>Price/piece</th>
+                                <th>Subtotal</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr th:each="lineItem,iterStat : ${lineItems}">
+                                <th class="form-group row" scope="row" th:text="${lineItem.product.name}">Product name</th>
+                                <td>
+                                    <!--<label for="quantity-input" class="col-xs-2 col-form-label">Number</label>-->
+                                    <input class="form-control" type="number" th:value="${lineItem.quantity}" id="quantity-input"></input>
+                                </td>
+                                <td th:text="${lineItem.product.getPrice()} + ' ' + ${lineItem.product.defaultCurrency}">Price</td>
+                                <td th:text="${lineItem.getTotalPrice()} + ' ' + ${lineItem.product.defaultCurrency}">Subtotal</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
+                </form>
             </div>
         </div>
     </div>
@@ -99,7 +125,7 @@
                             <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success confirmation" href="/add-product/:prodId" th:attr="href='/add-product/' + ${prod.id}" onclick="return confirm('Add this product to your cart?')">Add to cart</a>
+                            <a class="btn btn-success confirmation" href="/add-product/:prodId" th:attr="href='/add-product/' + ${prod.id}">Add to cart</a>
                         </div>
                     </div>
                 </div>
