--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -124,7 +124,10 @@
                         <div class="col-xs-12 col-md-6">
                             <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                         </div>
+                        <!--<div>-->
+                        <!--</div>-->
                         <div class="col-xs-12 col-md-6">
+                            <input type="number" value="1" min="1" id="input"></input>
                             <a class="btn btn-success confirmation" href="/add-product/:prodId" th:attr="href='/add-product/' + ${prod.id}">Add to cart</a>
                         </div>
                     </div>
