--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -133,8 +133,10 @@
                         <!--<div>-->
                         <!--</div>-->
                         <div class="col-xs-12 col-md-6">
-                            <input type="number" value="1" min="1" id="input"></input>
-                            <a class="btn btn-success confirmation" href="/add-product/:prodId" th:attr="href='/add-product/' + ${prod.id}">Add to cart</a>
+                            <form method="get" th:action="'/add-product/' + ${prod.id}">
+                                <input name="quantity" type="number" value="1" min="1" id="input"></input>
+                                <button type="submit" class="btn btn-success confirmation">Add to cart</button>
+                            </form>
                         </div>
                     </div>
                 </div>
