--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -126,7 +126,7 @@
                 <div class="caption group">
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
-                            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" th:attr="src='/img/product_' + ${prod.id} + '.jpg'" alt="" />
+                            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" th:attr="src='/img/product_' + ${product.id} + '.jpg'" alt="" />
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="inner-fullwidth">
@@ -149,7 +149,7 @@
                     </div>
                     <div class="row" th:each="embed_code,iterStat : ${embed_codes}">
                         <div class="col-xs-12 col-md-6">
-                            <div th:utext="${embed_code}"></div>
+                            <div th:utext="${embed_code}">&nbsp;</div>
                         </div>
                     </div>
                 </div>
