button on checkout page redirect to the correct route

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -33,7 +33,7 @@
             <div>
                 <h2>Please fill out the form with your billing data</h2>
             </div>
-            <form action="/checkout" class="fieldSet" method="post">
+            <form action="/order-complete" class="fieldSet" method="post">
                 <fieldset>
                 <div class="form-group">
                     <label class="field" for="firstName">First name</label><span class="req">*</span>
