added all the stuff

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -65,6 +65,10 @@
                 <button type="submit" class="btn btn-primary">Submit my data</button>
                 </fieldset>
             </form>
+
+            <form action="/order-complete"  method="post">
+                    <button type="submit" class="btn btn-primary">Complete order</button>
+            </form>
         </div>
     </div>
 </div>
